--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://SoniaMestre.github.io/mypersonalpage2021/",
+  "homepage": "https://SoniaMestre.github.io/mypersonalpage2021",
   "name": "mypersonalpage2021",
   "version": "0.1.0",
   "private": true,
